<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTemplateActivity"
    android:padding="20dp"
    android:background="@color/background_red">

    <TextView
        android:id="@+id/tv_heading_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_heading_template"
        android:textSize="30dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:textColor="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_template"/>
    
    <TextView
        android:id="@+id/tv_subheading_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_subheading_template"
        android:fontFamily="@font/poppins_regular"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_heading_template"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_subheading_template">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- Birthday Template Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_birthday_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_birthday_heading"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textColor="@color/primary"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_birthday_subheading"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/BirthdayTemplate" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/btn_card_birthday"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Christmas Template Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_christmas_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_christmas_heading"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/card_christmas_subheading"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ChristmasTemplate" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/btn_card_christmas"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Graduation Template Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_graduation_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_graduation_heading"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_graduation_subheading"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/GraduationTemplate" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/btn_card_graduation"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Wedding Template Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_wedding_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_wedding_heading"
                        android:textColor="@color/primary"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_weddiing_subheading"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/WeddingTemplate" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/btn_card_wedding"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>